pom file configuration